@@ -36,6 +36,9 @@ LIBGCRYPT_LT_CURRENT=7
 LIBGCRYPT_LT_AGE=0
 LIBGCRYPT_LT_REVISION=0
 
+NEED_GPG_ERROR_VERSION=0.4
+
+
 PACKAGE=$PACKAGE_NAME
 VERSION=$PACKAGE_VERSION
 
@@ -412,7 +415,7 @@ AC_DEFINE_UNQUOTED(NAME_OF_DEV_URANDOM, "$NAME_OF_DEV_URANDOM",
 #### Checks for libraries. ####
 ###############################
 
-AM_PATH_GPG_ERROR(0.1)
+AM_PATH_GPG_ERROR("$NEED_GPG_ERROR_VERSION")
 if test "x$GPG_ERROR_LIBS" = "x"; then
   AC_MSG_ERROR([libgpg-error is needed])
 fi
